--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -13,8 +13,8 @@
 				<a href="index.html" class="logo"></a>
 				<ul class="menu">
 					<li><a href="/">домой</a></li>
-					<li><a href="products/" class="active">продукты</a></li>
-					<li><a href="contact/">контакты</a></li>
+					<li><a href="/products/" class="active">продукты</a></li>
+					<li><a href="/contact/">контакты</a></li>
 					{% comment %} <li><a href="index.html">домой</a></li>
 					<li><a href="products.html" class="active">продукты</a></li>
 					<li><a href="contact.html">контакты</a></li> {% endcomment %}
