--- a/geekshop/templates/geekshop/contact.html
+++ b/geekshop/templates/geekshop/contact.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<title>Контакты</title>
-	<link rel="stylesheet" type="text/css" href="/static/geekshop/style.css">
-	<link rel="stylesheet" href="/static/geekshop/fonts/font-awesome/css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'geekshop/style.css'%}">
+	<link rel="stylesheet" href="{% static 'geekshop/fonts/font-awesome/css/font-awesome.css'%}">
 </head>
 <body>
 	<div class="container">
@@ -13,8 +14,8 @@
 				<a href="index.html" class="logo"></a>
 				<ul class="menu">
 					<li><a href="/">домой</a></li>
-					<li><a href="/products/">продукты</a></li>
-					<li><a href="/contact/" class="active">контакты</a></li>
+					<li><a href="/product">продукты</a></li>
+					<li><a href="/contact" class="active">контакты</a></li>
 				</ul>
 				<a href="#" class="search"></a>
                 <a href="#" class="basket"></a>
