--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -1,5 +1,12 @@
+{% extends 'geekshop/base.html' %}
 {% load static %}
-<!DOCTYPE html>
+
+{% block title %}Каталог{% endblock  %}
+
+
+
+
+{% comment %} <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -16,112 +23,108 @@
 					<li><a href="/">домой</a></li>
 					<li><a href="/product" class="active">продукты</a></li>
 					<li><a href="/contact">контакты</a></li>
-					{% comment %} <li><a href="index.html">домой</a></li>
-					<li><a href="products.html" class="active">продукты</a></li>
-					<li><a href="contact.html">контакты</a></li> {% endcomment %}
-
 				</ul>
 				<a href="#" class="search"></a>
                 <a href="#" class="basket"></a>
 			</div>
-		</div>
+		</div> {% endcomment %}
+{% block content %}
+<div class="details">
+	<div class="links clearfix">
+		<ul class="links-menu">
+			<li><a href="#" class="active">все</a></li>
+			<li><a href="#">дом</a></li>
+			<li><a href="#">офис</a></li>
+			<li><a href="#">модерн</a></li>
+			<li><a href="#">классика</a></li>
+		</ul>
+	</div>
 
-		<div class="details">
-			<div class="links clearfix">
-				<ul class="links-menu">
-					<li><a href="#" class="active">все</a></li>
-					<li><a href="#">дом</a></li>
-					<li><a href="#">офис</a></li>
-					<li><a href="#">модерн</a></li>
-					<li><a href="#">классика</a></li>
-				</ul>
+	<div class="details-products">
+		<div class="details-slider">
+			<div class="slider-product">
+				<img src="{% static 'geekshop/img/slider1.jpg'%}">
 			</div>
-
-			<div class="details-products">
-				<div class="details-slider">
-					<div class="slider-product">
-						<img src="{% static 'geekshop/img/slider1.jpg'%}">
-					</div>
-					<div class="slider-control">
-						<div class="block">
-							<a href="#"><img src="{% static 'geekshop/img/controll.jpg'%}" alt="">
-								<div class="text"></div>
-							</a>
-						</div>
-						<div class="block">
-							<a href="#"><img src="{% static 'geekshop/img/controll1.jpg'%}" alt="">
-								<div class="text"></div>
-							</a>
-						</div>
-						<div class="block">
-							<a href="#"><img src="{% static 'geekshop/img/controll2.jpg'%}" alt="">
-								<div class="text"></div>
-							</a>
-						</div>
-					</div>
-				</div>
-
-				<div class="description">
-					<h3 class="big-bold">Отличный стул</h3>
-					<h3 class="red">горячее предложение</h3>
-					<p class="price"> 2585.9 <span>руб</span></p>
-					<a href="#" class="red-button">
-						заказать <i class="fa fa-chevron-right" aria-hidden="true"></i>
+			<div class="slider-control">
+				<div class="block">
+					<a href="#"><img src="{% static 'geekshop/img/controll.jpg'%}" alt="">
+						<div class="text"></div>
 					</a>
-					<div class="description-text">
-						<p>Расположитесь комфортно.</p> 
-						<p>Отличное качество материалов
-						позволит вам это.</p> 
-						<p>Различные цвета</p>
-						<p>высочайший уровень
-						эргономики и прочность.</p>
-					</div>
 				</div>
-			</div>
-
-			<div class="related">
-				<div class="title clearfix">
-					<h2>Похожие продукты</h2>
-					<a class="explore" href="#">показать все <img src="{% static 'geekshop/img/arrow.png'%}" alt=""></a>
+				<div class="block">
+					<a href="#"><img src="{% static 'geekshop/img/controll1.jpg'%}" alt="">
+						<div class="text"></div>
+					</a>
 				</div>
-				<div class="related-products clearfix">
-					<div class="block">
-						<a href="#"><img src="{% static 'geekshop/img/product-11.jpg'%}" alt="">
-							<div class="text">
-								<img src="{% static 'geekshop/img/icon-hover.png'%}" alt="img">
-								<h4>Стул повышенного качества</h4>
-								<p>Не оторваться. </p>
-							</div>
-						</a>
-					</div>
-					<div class="block">
-						<a href="#"><img src="{% static '/geekshop/img/product-21.jpg'%}" alt="">
-							<div class="text">
-								<img src="{% static 'geekshop/img/icon-hover.png'%}" alt="img">
-								<h4>Стул повышенного качества</h4>
-								<p>Не оторваться. </p>
-							</div>
-						</a>
-					</div>
-					<div class="block">
-						<a href="#"><img src="{% static 'geekshop/img/product-31.jpg'%}" alt="">
-							<div class="text">
-								<img src="{% static 'geekshop/img/icon-hover.png'%}" alt="img">
-								<h4>Стул повышенного качества</h4>
-								<p>Не оторваться. </p>
-							</div>
-						</a>
-					</div>
-
+				<div class="block">
+					<a href="#"><img src="{% static 'geekshop/img/controll2.jpg'%}" alt="">
+						<div class="text"></div>
+					</a>
 				</div>
 			</div>
 		</div>
 
-		<div class="clr"></div>
+		<div class="description">
+			<h3 class="big-bold">Отличный стул</h3>
+			<h3 class="red">горячее предложение</h3>
+			<p class="price"> 2585.9 <span>руб</span></p>
+			<a href="#" class="red-button">
+				заказать <i class="fa fa-chevron-right" aria-hidden="true"></i>
+			</a>
+			<div class="description-text">
+				<p>Расположитесь комфортно.</p> 
+				<p>Отличное качество материалов
+				позволит вам это.</p> 
+				<p>Различные цвета</p>
+				<p>высочайший уровень
+				эргономики и прочность.</p>
+			</div>
+		</div>
+	</div>
 
-	</div>	
+	<div class="related">
+		<div class="title clearfix">
+			<h2>Похожие продукты</h2>
+			<a class="explore" href="#">показать все <img src="{% static 'geekshop/img/arrow.png'%}" alt=""></a>
+		</div>
+		<div class="related-products clearfix">
+			<div class="block">
+				<a href="#"><img src="{% static 'geekshop/img/product-11.jpg'%}" alt="">
+					<div class="text">
+						<img src="{% static 'geekshop/img/icon-hover.png'%}" alt="img">
+						<h4>Стул повышенного качества</h4>
+						<p>Не оторваться. </p>
+					</div>
+				</a>
+			</div>
+			<div class="block">
+				<a href="#"><img src="{% static '/geekshop/img/product-21.jpg'%}" alt="">
+					<div class="text">
+						<img src="{% static 'geekshop/img/icon-hover.png'%}" alt="img">
+						<h4>Стул повышенного качества</h4>
+						<p>Не оторваться. </p>
+					</div>
+				</a>
+			</div>
+			<div class="block">
+				<a href="#"><img src="{% static 'geekshop/img/product-31.jpg'%}" alt="">
+					<div class="text">
+						<img src="{% static 'geekshop/img/icon-hover.png'%}" alt="img">
+						<h4>Стул повышенного качества</h4>
+						<p>Не оторваться. </p>
+					</div>
+				</a>
+			</div>
 
-	<div class="footer">
+		</div>
+	</div>
+</div>
+
+<div class="clr"></div>
+
+</div>	
+
+	{% comment %} <div class="footer">
         <div class="clearfix">
             <div class="text-footer">
                 <h3>контакты</h3>
@@ -149,4 +152,5 @@
     </div>	
 
 </body>
-</html>
+</html> {% endcomment %}
+{% endblock %}
