--- a/geekshop/templates/geekshop/base.html
+++ b/geekshop/templates/geekshop/base.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 	<title>Магазин</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'geekshop/style.css' %}">
-	<link rel="stylesheet" href="{% static 'geekshop/fonts/font-awesome/css/font-awesome.css' %}">
+	<link rel="stylesheet" href="{% static 'geekshop/fonts/font-awesome/css/font-awesome.css'%} ">
+	{% comment %} <link rel="stylesheet" href="{% static 'geekshop/fonts/font-awesome/css/font-awesome.css'%}"> {% endcomment %}
 </head>
 <body>
 	<div class="container">
