--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -5,7 +5,8 @@
 {% block content %}
 {% include 'geekshop/includes/inc_main_menu.html' %}
 <div class="details">
-	{% include 'geekshop\includes\inc_category_menu.html'%}
+	{% include 'geekshop/includes/inc_category_menu.html'%}
+	{% comment %} {% include 'fff/includes/inc_category_menu_fff.html'%} {% endcomment %}
 
 	<div class="details-products">
 		<div class="details-slider">
