--- a/geekshop/templates/geekshop/base.html
+++ b/geekshop/templates/geekshop/base.html
@@ -3,10 +3,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Магазин</title>
+	<title>{% block title %}{{ title|title }}{% endblock %}</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'geekshop/style.css' %}">
 	<link rel="stylesheet" href="{% static 'geekshop/fonts/font-awesome/css/font-awesome.css'%} ">
-	{% comment %} <link rel="stylesheet" href="{% static 'geekshop/fonts/font-awesome/css/font-awesome.css'%}"> {% endcomment %}
+	
 </head>
 <body>
 	<div class="container">
@@ -15,8 +15,8 @@
         {% block content %}
         {% endblock %}
 
-        <div class="clr"></div>
-    </div>	
-    {% include 'geekshop/includes/inc_main_menu.html' %}
+    	    <div class="clr"></div>
+    	</div>	
+    {% include 'geekshop/includes/inc_footer.html' %}
 </body>
 </html>
