--- a/geekshop/templates/geekshop/includes/inc_main_menu.html
+++ b/geekshop/templates/geekshop/includes/inc_main_menu.html
@@ -1,9 +1,24 @@
+
 <div class="header clearfix">
-    <a href="/" class="logo"></a>
+    <a href="{% url 'index' %}" class="logo"></a>
     <ul class="menu">
-        <li><a href="/" class="active">домой</a></li>
+        <li><a href="{% url 'index' %}" class="active">домой</a></li>
         <li><a href="{% url 'product:index' %}">продукты</a></li>
         <li><a href="{% url 'contact' %}">контакты</a></li>
+        {% comment %} {% if user.is_authenticated %}
+        <li>
+            <a href="{% url 'auth:edit' %}">
+                {{ user.first_name|default:'Пользователь' }}
+            </a>
+        </li>
+        {% endif %}
+        <li>
+            {% if user.is_authenticated %}
+              <a href="{% url 'auth:logout' %}">выйти</a>
+            {% else %}
+              <a href="{% url 'auth:login' %}">войти</a>
+            {% endif %}
+        </li> {% endcomment %}
     </ul>
     <a href="#" class="search"></a>
-</div>            
+</div>
