--- a/geekshop/templates/geekshop/includes/inc_main_menu.html
+++ b/geekshop/templates/geekshop/includes/inc_main_menu.html
@@ -1,11 +1,10 @@
-
 <div class="header clearfix">
     <a href="{% url 'index' %}" class="logo"></a>
     <ul class="menu">
         <li><a href="{% url 'index' %}" class="active">домой</a></li>
-        <li><a href="{% url 'product:index' %}">продукты</a></li>
-        <li><a href="{% url 'contact' %}">контакты</a></li>
-        {% comment %} {% if user.is_authenticated %}
+        <li><a href="{% url 'products:index' %}">продукты</a></li>
+        <li><a href="{% url 'contacts' %}">контакты</a></li>
+        {% if user.is_authenticated %}
         <li>
             <a href="{% url 'auth:edit' %}">
                 {{ user.first_name|default:'Пользователь' }}
@@ -18,7 +17,7 @@
             {% else %}
               <a href="{% url 'auth:login' %}">войти</a>
             {% endif %}
-        </li> {% endcomment %}
+        </li>
     </ul>
     <a href="#" class="search"></a>
 </div>
