--- a/authapp/templates/authapp/edit.html
+++ b/authapp/templates/authapp/edit.html
@@ -12,7 +12,7 @@
         <form class="form-horizontal" action="{% url 'auth:edit' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ edit_form.as_p }}
-            <input class="form-control" type="submit" value="сохранить">
+            <input class="btn btn-round form-control" type="submit" value="сохранить">
         </form>
         <button class="btn btn-round form-control last">
             <a href="{% url 'index' %}" class="">
