--- a/geekshop/templates/geekshop/index.html
+++ b/geekshop/templates/geekshop/index.html
@@ -10,7 +10,7 @@
         <h3 class="big"> удобные стулья</h3>
         <h4>{{ slogan|title }} {{ headers }}</h4>
         <p>Новый уровень комфорта. Отличные характеристики.</p>
-        <a href="#" class="button-order">заказать <img src="/static/geekshop/img/arrow.png" alt=""></a>
+        <a href="#" class="button-order">заказать <img src="{% static '/geekshop/img/arrow.png' %}" alt=""></a>
     </div>
     <div class="navi">
         <a href="#"></a><a href="#"></a><a href="#"></a>
@@ -21,23 +21,23 @@
     <div class="featured-menu">
             <a class="active" href="#">Популярные</a><a href="#">Новинки</a>
     </div>
-    <a class="explore" href="#">показать все <img src="/static/geekshop/img/arrow.png" alt=""></a>
+    <a class="explore" href="#">показать все <img src="{% static '/geekshop/img/arrow.png' %}" alt=""></a>
     <div class="clearfix">
     </div>
     <div class="tab-content">
         <div class="block">
-            <a href="#"><img src="/static/geekshop/img/product-1.jpg" alt="">
+            <a href="#"><img src="{% static '/geekshop/img/product-1.jpg' %}" alt="">
                 <div class="text">
-                    <img src="img/icon-hover.png" alt="img">
+                    <img src="{% static '/geekshop/img/icon-hover.png' %}" alt="img">
                     <h4>Отличный стул</h4>
                     <p>Расположитесь комфортно. </p>
                 </div>
             </a>
         </div>
         <div class="block">
-            <a href="#"><img src="img/product-2.jpg" alt="">
+            <a href="#"><img src="{% static '/geekshop/img/product-2.jpg'%}" alt="">
                 <div class="text">
-                    <img src="img/icon-hover.png" alt="">
+                    <img src="{% static '/geekshop/img/icon-hover.png'%}" alt="">
                     <h4>Стул повышенного качества</h4>
                     <p>Не оторваться. </p>
                 </div>
