--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -10,21 +10,21 @@
     <div class="details-products">
         <div class="details-slider">
             <div class="slider-product">
-                <img src="/static/geekshop/img/slider1.jpg">
+                <img src="{% static '/geekshop/img/slider1.jpg'%}">
             </div>
             <div class="slider-control">
                 <div class="block">
-                    <a href="#"><img src="/static/geekshop/img/controll.jpg" alt="">
+                    <a href="#"><img src="{%static '/geekshop/img/controll.jpg'%}" alt="">
                         <div class="text"></div>
                     </a>
                 </div>
                 <div class="block">
-                    <a href="#"><img src="/static/geekshop/img/controll1.jpg" alt="">
+                    <a href="#"><img src="{% static '/geekshop/img/controll1.jpg'%}" alt="">
                         <div class="text"></div>
                     </a>
                 </div>
                 <div class="block">
-                    <a href="#"><img src="/static/geekshop/img/controll2.jpg" alt="">
+                    <a href="#"><img src="{% static '/geekshop/img/controll2.jpg'%}" alt="">
                         <div class="text"></div>
                     </a>
                 </div>
@@ -52,14 +52,14 @@
     <div class="related">
         <div class="title clearfix">
             <h2>Похожие продукты</h2>
-            <a class="explore" href="#">показать все <img src="/static/geekshop/img/arrow.png" alt=""></a>
+            <a class="explore" href="#">показать все <img src="{% static '/geekshop/img/arrow.png'%}" alt=""></a>
         </div>
         <div class="related-products clearfix">
             {% for product in related_products %}
             <div class="block">
                 <a href="#"><img src="/media/{{ product.image }}" alt="">
                     <div class="text">
-                        <img src="/static/geekshop/img/icon-hover.png" alt="img">
+                        <img src="{% static '/geekshop/img/icon-hover.png'%}" alt="img">
                         <h4>{{ product.name }}</h4>
                         <p>{{ product.short_desc }} </p>
                         <p>{{ product.category.name }} </p>
