--- a/geekshop/templates/geekshop/includes/inc_main_menu.html
+++ b/geekshop/templates/geekshop/includes/inc_main_menu.html
@@ -9,6 +9,13 @@
             <a href="{% url 'auth:edit' %}">
                 {{ user.first_name|default:'Пользователь' }}
             </a>
+            <a href="{% url 'basket:view' %}" class="basket">
+                <span>
+                    {% if basket %}
+                        {{ baskel|length }}
+                    {% endif %}
+                </span>
+            </a>                        
         </li>
         {% endif %}
         <li>
