--- a/authapp/templates/authapp/register.html
+++ b/authapp/templates/authapp/register.html
@@ -6,7 +6,7 @@
     <form class="form-horizontal" action="{% url 'auth:register' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ register_form.as_p }}
-        <input class="btn btn-round form-control" type="submit" value="зарегистрироваться">
+        <input class="form-control" type="submit" value="зарегистрироваться">
     </form>
     </div>
 
