--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -1,7 +1,8 @@
 {% extends 'geekshop/base.html' %}
 {% load static %}
 
-{% block content %}{% include 'geekshop/includes/inc_main_menu.html' %}
+{% block content %}
+{% include 'geekshop/includes/inc_main_menu.html' %}
 <div class="details">
     {% include 'mainapp/includes/inc_category_menu.html' %}
     <div class="details-products">
@@ -48,29 +49,28 @@
     <div class="products_list" style="margin-top: 50px;"> 
     {% if category %}    
         <div class= "title clearfix">   
-            <h2>
-            Kатегория: "{{ category.name|title }}"
-            </h2>  
+            <h2>Kатегория: "{{ category.name|title }}"</h2>  
         </div>
     {% endif %}
         <div class="related-products" style="display: flex; justify-content: center; margin-top: 20px;">
         {% for product in products %}
         <div class="block">
-            <a href="#"><img src="/media/{{product.image}}" alt="img">
+            <a href="{% url 'basket:add' product.pk %}"><img src="/media/{{product.image}}" alt="img">
                 <div class="text">
-                    <img src="{% static '/geekshop/img/icon-hover.png'%}" alt="img">
+                    <img src="/static/geekshop/img/icon-hover.png" alt="img">
                     <h4>{{product.name}}</h4>      
                     <p>{{product.short_desc}}</p>
-                    <p>{{ product.category.name}}</p>
+                    <p>{{product.category.name}}</p>
                 </div>
             </a>
+        </div>
         {% endfor %}
        </div>
-    
+
     <div class="related">
         <div class="title clearfix">
             <h2>Похожие продукты</h2>
-            <a class="explore" href="#">показать все <img src="{% static '/geekshop/img/arrow.png'%}" alt=""></a>
+            <a class="explore" href="#">показать все <img src="/static/geekshop/img/arrow.png" alt=""></a>
         </div>
         <div class="related-products clearfix">
             {% for product in related_products %}
