--- a/geekshop/templates/geekshop/includes/inc_main_menu.html
+++ b/geekshop/templates/geekshop/includes/inc_main_menu.html
@@ -8,15 +8,15 @@
         <li>
             <a href="{% url 'auth:edit' %}">
                 {{ user.first_name|default:'Пользователь' }}
+
             </a>
-            <a href="{% url 'basket:view' %}" class="basket">
+            <a href="{% url 'basket:view' %}" >
                 <span>
-                    {% if basket %}
-                        {{ baskel|length }}
-                    {% endif %}
+                    {% if basket %} ({{ basket|length }}) {% endif %}
                 </span>
-            </a>                        
+            </a>
         </li>
+
         {% endif %}
         <li>
             {% if user.is_authenticated %}
