--- a/geekshop/templates/geekshop/includes/inc_main_menu.html
+++ b/geekshop/templates/geekshop/includes/inc_main_menu.html
@@ -8,8 +8,18 @@
         <li>
             <a href="{% url 'auth:edit' %}">
                 {{ user.first_name|default:'Пользователь' }}
+
+            </a>
+            <a href="{% url 'basket:view' %}" >
+                <span>
+                    {% if basket %}
+                        {{ basket.0.total_cost|floatformat:0 }} руб
+                        ({{ basket.0.total_quantity }} шт )
+                    {% endif %}
+                </span>
             </a>
         </li>
+
         {% endif %}
         <li>
             {% if user.is_authenticated %}
