--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -10,21 +10,21 @@
     <div class="details-products">
         <div class="details-slider">
             <div class="slider-product">
-                <img src="/static/geekshop/img/slider1.jpg">
+                <img src="/media/{{ hot_product.image }}">
             </div>
             <div class="slider-control">
                 <div class="block">
-                    <a href="#"><img src="/static/geekshop/img/controll.jpg" alt="">
+                    <a href="#"><img src="/media/{{ hot_product.image }}" style="width: 100%" alt="">
                         <div class="text"></div>
                     </a>
                 </div>
                 <div class="block">
-                    <a href="#"><img src="/static/geekshop/img/controll1.jpg" alt="">
+                    <a href="#"><img src="/media/{{ hot_product.image }}" style="width: 100%" alt="">
                         <div class="text"></div>
                     </a>
                 </div>
                 <div class="block">
-                    <a href="#"><img src="/static/geekshop/img/controll2.jpg" alt="">
+                    <a href="#"><img src="/media/{{ hot_product.image }}" style="width: 100%" alt="">
                         <div class="text"></div>
                     </a>
                 </div>
@@ -32,22 +32,41 @@
         </div>
 
         <div class="description">
-            <h3 class="big-bold">Отличный стул</h3>
+            <h3 class="big-bold">{{ hot_product.name }}</h3>
             <h3 class="red">горячее предложение</h3>
-            <p class="price"> 2585.9 <span>руб</span></p>
+            <p class="price"> {{ hot_product.price }} <span>руб</span></p>
             <a href="#" class="red-button">
                 заказать <i class="fa fa-chevron-right" aria-hidden="true"></i>
             </a>
             <div class="description-text">
-                <p>Расположитесь комфортно.</p>
-                <p>Отличное качество материалов
-                позволит вам это.</p>
-                <p>Различные цвета</p>
-                <p>высочайший уровень
-                эргономики и прочность.</p>
+                {{ hot_product.description }}
             </div>
         </div>
     </div>
+
+    <div class="products_list" style="margin-top: 50px;">
+    {% if category %}
+      <div class="title clearfix">
+        <h2>
+          Категория: "{{ category.name|title }}"
+        </h2>
+      </div>
+    {% endif %}
+        <div class="related-products" style="display: flex; justify-content: center; margin-top: 20px;">
+        {% for product in products %}
+        <div class="block">
+            <a href="{% url 'products:product' product.pk %}"><img src="/media/{{ product.image }}" alt="">
+                <div class="text">
+                    <img src="/static/geekshop/img/icon-hover.png" alt="img">
+                    <h4>{{ product.name }}</h4>
+                    <p>{{ product.short_desc }} </p>
+                    <p>{{ product.category.name }} </p>
+                </div>
+            </a>
+        </div>
+        {% endfor %}
+    </div>
+
 
     <div class="related">
         <div class="title clearfix">
