--- a/basketapp/templates/basketapp/basket.html
+++ b/basketapp/templates/basketapp/basket.html
@@ -2,8 +2,13 @@
 {% load static %}
 
 {% block js %}
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="{% static 'basketapp/js/basket_scripts.js' %}"></script>
+    <script
+        src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous">
+    </script>
+    <script src="{% static 'basketapp/js/basket_scripts.js' %}">
+    </script>
 {% endblock %}
 
 {% block content %}
