--- a/geekshop/templates/geekshop/includes/inc_main_menu.html
+++ b/geekshop/templates/geekshop/includes/inc_main_menu.html
@@ -19,7 +19,12 @@
                 </span>
             </a>
         </li>
-
+        {% if user.is_superuser %}
+        <li>
+            <a href="{% url 'adminapp:users' %}">админка</a>
+        </li>
+        {% endif %}
+        
         {% endif %}
         <li>
             {% if user.is_authenticated %}
