--- a/adminapp/templates/adminapp/includes/inc_menu.html
+++ b/adminapp/templates/adminapp/includes/inc_menu.html
@@ -1,7 +1,8 @@
 <a href="#" class="nav_link active">
     <i class='bx bx-grid-alt nav_icon'></i>
     <span class="nav_name">Dashboard</span> </a>
-<a href="{% url 'adminapp:users' %}"
+
+<a href="{% url 'admin_staff:users' %}"
     class="{% if request.resolver_match.url_name == 'users' %}
     active
     {% endif %} nav_link">
@@ -9,12 +10,25 @@
     <span class="nav_name">Пользователи</span>
 </a>
 
-{% comment %} <a href="{% url 'adminapp:categories' %}"
+<a href="{% url 'admin_staff:categories' %}"
     class="{% if request.resolver_match.url_name == 'categories' %}
     active
     {% endif %} nav_link">
     <i class='bx bx-message-square-detail nav_icon'></i>
     <span class="nav_name">Категории</span>
+</a>
+
+{% comment %} <a href="#" class="nav_link" 
+    <i class='bx bx-grid-alt nav_icon'></i>
+    <span class="nav_name">Товары</span>
+</a> {% endcomment %}
+
+<a href="{% url 'admin_staff:products' %}"
+    class="{% if request.resolver_match.url_name == 'products' %}
+    active
+    {% endif %} nav_link">
+    <i class='bx bx-message-square-detail nav_icon'></i>
+    <span class="nav_name">Продукты</span>
 </a>
 
 <a href="#" class="nav_link">
@@ -30,4 +44,4 @@
 <a href="#" class="nav_link">
     <i class='bx bx-bar-chart-alt-2 nav_icon'></i>
     <span class="nav_name">Stats</span>
-</a> {% endcomment %}
+</a>
