--- a/adminapp/templates/adminapp/users.html
+++ b/adminapp/templates/adminapp/users.html
@@ -36,7 +36,7 @@
                         <tbody>
                         {% for user in objects %}
                             <tr>
-                                <td><a href="{#% url 'adminapp:user_update' user.id %#}" style="color: dodgerblue">{{ user.username }}</a></td>
+                                <td><a href="{#% url 'admin_staff:user_update' user.id %#}" style="color: dodgerblue">{{ user.username }}</a></td>
                                 <td>{{ user.first_name }}</td>
                                 <td>{{ user.last_name }}</td>
                                 <td>{{ user.email }}</td>
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="card-footer">
-                <a href="{#% url 'adminapp:user_create' %#}">
+                <a href="{% url 'adminapp:user_create' %}">
                     <button class="btn btn-success">Создать пользователя</button>
                 </a>
             </div>
