--- a/mainapp/templates/mainapp/includes/inc_category_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_category_menu.html
@@ -2,16 +2,17 @@
     <ul class="links-menu">
         <li>
             <a href="{% url 'products:category' 0 %}" class="{% if request.resolver_match.kwargs.pk == 0 %}
-                active{% endif %}">
+            active
+            {% endif %}">
                 Все
             </a>
         </li>
         {% for link in links_menu %}
             <li>
-                <a href="{% url 'products:category' link.pk %}"
-                   class="{% if request.resolver_match.kwargs.pk|add:'0' == link.pk %}
+              <a href="{% url 'products:category' link.pk %}"
+                 class="{% if request.resolver_match.kwargs.pk|add:'0' == link.pk %}
                         active{% endif %}">{{ link.name }}
-                </a>
+              </a>
             </li>
         {% endfor %}
     </ul>
