--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -18,8 +18,13 @@
         </div>
         <button class="btn btn-round form-control">
         <a href="{% url 'auth:register' %}" class="">
-            зарегистрироваться
+            Зарегистрироваться
         </a>
-    </button>
+        </button>
+        <button class="btn btn-round form-control">
+            <a href="{% url 'social:begin' 'vk-oauth2' %}?next=/">
+             Вход через ВКонтакте
+            </a>
+        </button>
     </div>
 {% endblock %}
