--- a/mainapp/static/mainapp/style.css
+++ b/mainapp/static/mainapp/style.css
@@ -39,7 +39,7 @@
 	padding-left: 190px
 }
 
-.tab-content {
+/* .tab-content {
 	margin-top: 50px;
 	display: flex;
 	justify-content: space-between;
@@ -52,12 +52,12 @@
 	width: 270px;
 	position: relative;
 	margin: 10px;
-}
+} */
 .related {
 	padding: 0px 98px;
 }
 .related .title {
-	height: 343px;
+	/* height: 343px; */
 	margin-right: 0;
 }
 /*.related .title h2 {*/
@@ -72,7 +72,7 @@
 /*.related-products .block a img {*/
 /*	float: left;*/
 /*}*/
-.related-products .block {
+/* .related-products .block {
 	float: left;
 	margin-right: 30px;
 	display: block;
@@ -83,4 +83,4 @@
 .related .title {
     height: 200px;
     margin-right: 0;
-}
+} */
