--- a/adminapp/templates/adminapp/includes/inc_menu.html
+++ b/adminapp/templates/adminapp/includes/inc_menu.html
@@ -23,13 +23,13 @@
     <span class="nav_name">Товары</span>
 </a> {% endcomment %}
 
-<a href="{% url 'admin_staff:products' %}"
+{% comment %} <a href="{% url 'admin_staff:products' %}"
     class="{% if request.resolver_match.url_name == 'products' %}
     active
     {% endif %} nav_link">
     <i class='bx bx-message-square-detail nav_icon'></i>
     <span class="nav_name">Продукты</span>
-</a>
+</a> {% endcomment %}
 
 <a href="#" class="nav_link">
     <i class='bx bx-bookmark nav_icon'></i>
