test VSC plugin

--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -7,10 +7,6 @@
             <div class="mx-auto col-3">
                 <form class="form-horizontal" action="{% url 'auth:login' %}" method="post" >
                     {% csrf_token %}
-                    {% if next %}
-                        <input type="hidden" name="next" value="{{ next }}">
-                    {% endif %}
-
                     {{ login_form.as_p }}
                     <button type="submit" class="btn btn-primary">Войти</button>
                 </form>
@@ -18,13 +14,8 @@
         </div>
         <button class="btn btn-round form-control">
         <a href="{% url 'auth:register' %}" class="">
-            Зарегистрироваться
+            зарегистрироваться
         </a>
-        </button>
-        <button class="btn btn-round form-control">
-            <a href="{% url 'social:begin' 'vk-oauth2' %}?next=/">
-             Вход через ВКонтакте
-            </a>
-        </button>
+    </button>
     </div>
 {% endblock %}
