--- a/geekshop/templates/geekshop/includes/inc_footer.html
+++ b/geekshop/templates/geekshop/includes/inc_footer.html
@@ -1,6 +1,5 @@
 <div class="footer">
-    {% comment %} <div class="clearfix"> {% endcomment %}
-    <div class="d-flex">
+    <div class="clearfix">
         <div class="text-footer">
             <h3>контакты</h3>
         </div>
