--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -32,37 +32,33 @@
         </div>
 
         <div class="description">
-            <h3 class="big-bold">Отличный стул</h3>
+            <h3 class="big-bold">{{ hot_product.name }}</h3>
             <h3 class="red">горячее предложение</h3>
-            <p class="price"> 2585.9 <span>руб</span></p>
+            <p class="price"> {{ hot_product.price }} <span>руб</span></p>
             <a href="#" class="red-button">
                 заказать <i class="fa fa-chevron-right" aria-hidden="true"></i>
             </a>
             <div class="description-text">
-                <p>Расположитесь комфортно.</p>
-                <p>Отличное качество материалов
-                позволит вам это.</p>
-                <p>Различные цвета</p>
-                <p>высочайший уровень
-                эргономики и прочность.</p>
+                {{ hot_product.description }}
             </div>
         </div>
     </div>
 
-    <div class="products_list" style="nargin-top: 50px;">
+    <div class="products_list" style="margin-top: 50px;">
     {% if category %}
-        <div class="title clearfix">
-            <h2>
-                Категория: "{{ category.name|title }}"
-            </h2>
-        </div>
+      <div class="title clearfix">
+        <h2>
+          Категория: "{{ category.name|title }}"
+        </h2>
+      </div>
     {% endif %}
         <div class="related-products" style="display: flex; justify-content: center; margin-top: 20px;">
         {% for product in products %}
-            <div class="block">
+        <div class="block">
                 <a href="{% url 'basket:add' product.pk %}"><img src="/media/{{ product.image }}" alt="">
+            {% comment %} <a href="{% url 'products:product' product.pk %}"><img src="/media/{{ product.image }}" alt=""> {% endcomment %}
                 <div class="text">
-                    <img scr="/static/geekshop/img/icon-hover.png" alt="img">
+                    <img src="/static/geekshop/img/icon-hover.png" alt="img">
                     <h4>{{ product.name }}</h4>
                     <p>{{ product.short_desc }} </p>
                     <p>{{ product.category.name }} </p>
