--- a/geekshop/templates/geekshop/base.html
+++ b/geekshop/templates/geekshop/base.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 	<title>{% block title %}{{ title|title }}{% endblock %}</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'geekshop/style.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 	<link rel="stylesheet" href="{% static '/geekshop/fonts/font-awesome/css/font-awesome.css' %}">
 </head>
 <body>
@@ -17,5 +18,8 @@
 		<div class="clr"></div>
 	</div>
     {% include 'geekshop/includes/inc_footer.html' %}
+
+	{% block js %}
+    {% endblock %}
 </body>
 </html>
