--- a/geekshop/templates/geekshop/contact.html
+++ b/geekshop/templates/geekshop/contact.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
-		{% comment %} <div class="hero"> {% endcomment %}
-		<div class="header clearfix">
+		<div class="hero">
+		{% comment %} <div class="header clearfix"> {% endcomment %}
             {% include 'geekshop/includes/inc_main_menu.html' %}
 			<h1>наши контакты</h1>
 		</div>
