--- a/geekshop/templates/geekshop/includes/inc_main_menu.html
+++ b/geekshop/templates/geekshop/includes/inc_main_menu.html
@@ -5,7 +5,6 @@
         <li><a href="{% url 'products:index' %}">продукты</a></li>
         <li><a href="{% url 'contacts' %}">контакты</a></li>
         {% if user.is_authenticated %}
-        <!-- Example split danger button -->
             <li>
                 <a href="{% url 'basket:view' %}" >
                     <span>
@@ -30,17 +29,17 @@
                     {% if user.is_superuser %}
                     <li><a class="dropdown-item" href="{% url 'admin_staff:users' %}">админка</a></li>
                     {% endif %}
-                    <li>
-                        {% if user.is_authenticated %}
-                        <a class="dropdown-item" href="{% url 'auth:logout' %}">выйти</a>
-                        {% else %}
-                        <a class="dropdown-item" href="{% url 'auth:login' %}">войти</a>
-                        {% endif %}
-                    </li>
                 </ul>
             </li> 
 
         {% endif %}
+        <li>
+            {% if user.is_authenticated %}
+            <a href="{% url 'auth:logout' %}">выйти</a>
+            {% else %}
+            <a href="{% url 'auth:login' %}">войти</a>
+            {% endif %}
+        </li>
     </ul>
     <ul>
         <a href="#" class="search"></a>
