--- a/mainapp/templates/mainapp/includes/inc_category_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_category_menu.html
@@ -1,7 +1,8 @@
 <div class="links clearfix">
     <ul class="links-menu">
         <li>
-            <a href="{% url 'products:category' 0 %}" class="{% if request.resolver_match.kwargs.pk == 0 %}
+            <a href="{% url 'products:category' 0 %}" 
+                class="{% if request.resolver_match.kwargs.pk == 0 %}
                 active{% endif %}">
                 Все
             </a>
