--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -12,8 +12,8 @@
 <div class="details">
     {% include 'mainapp/includes/inc_category_menu.html' %}
 
-            <div class="details-slider d-flex">
-                <div class="details-products">
+            <div class="details-products d-flex">
+                <div class="details-slider">
 				
 					<div class="slider-product text-center">
 						<img src="/media/{{hot_product.image}}">
