--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -94,13 +94,13 @@
 			<div class="related">
 				<div class="title clearfix">
 					<h2>Похожие продукты</h2>
-					<a class="explore" href="#">показать все <img src="/static/geekshop/img/arrow.png" alt=""></a>
+					<a class="explore" href="#">показать все <img src="{% static 'geekshop/img/arrow.png' %}" alt=""></a>
 				</div>
 				<div class="related-products clearfix">
 					<div class="block">
 						<a href="#"><img src="/media/{{product.image}}" alt="">
 							<div class="text">
-								<img src="img/icon-hover.png" alt="img">
+								<img src="{% static 'geekshop/img/icon-hover.png' %} " alt="img">
 								<h4>Стул повышенного качества</h4>
 								<p>Не оторваться. </p>
 							</div>
