--- a/adminapp/templates/adminapp/includes/inc_menu.html
+++ b/adminapp/templates/adminapp/includes/inc_menu.html
@@ -14,13 +14,13 @@
     <span class="nav_name">Категории</span>
 </a>
 
-{% comment %} <a href="{% url 'admin_staff:products' %}" 
+<a href="{% url 'admin_staff:product_read' pk=0 %}" 
     class="{% if request.resolver_match.url_name == 'users' %}
     active
     {% endif %} nav_link">
     <i class='bx bx-grid-alt nav_icon'></i>
     <span class="nav_name">Товары</span>
-</a> {% endcomment %}
+</a> 
 
 <a href="{% url 'ordersapp:orders_list' %}" class="nav_link">
     <i class='bx bx-bookmark nav_icon'></i>
