--- a/ordersapp/templates/ordersapp/includes/inc_order_summary.html
+++ b/ordersapp/templates/ordersapp/includes/inc_order_summary.html
@@ -5,12 +5,24 @@
    <div class="h4">обновлен: {{ object.updated|date:"Y-m-d H:i:s" }}</div>
    <div class="h4">cтатус: {{ object.get_status_display }}</div>
    <hr>
-   <div class="h4">
-       общее количество товаров: <span class="order_total_quantity">{{ object.get_total_quantity }}</span>
-   </div>
-   <div class="h3">
-       общая стоимость: <span class="order_total_cost">{{ object.get_total_cost }}</span> руб
-   </div>
+   {% comment %} 
+   <div class="h4">100: <span class="h2">{{ object.blahblah }}</span></div> 
+
+   {% with obj_get=object.blahblah %}
+    <div class="h4">get_summary: <span class="h2">obj_get: {{ obj_get }}</span></div>
+   {% endwith %}
+
+    <div class="h4">get_summary: <span class="h2">obj_get: {{ obj_get2.huurn }}</span></div>
+   {% endcomment %}
+
+   {% with object_summary=object.get_summary %}
+        <div class="h4">
+            общее количество товаров: <span class="order_total_quantity">{{ object_summary.total_quantity }}</span>
+        </div>
+        <div class="h3">
+            общая стоимость: <span class="order_total_cost">{{ object_summary.total_cost }}</span> руб
+        </div>
+   {% endwith %}
 {% else %}
    <div class="h2">Новый заказ</div>
    <hr>
