--- a/adminapp/templates/adminapp/productcategory_confirm_able.html
+++ b/adminapp/templates/adminapp/productcategory_confirm_able.html
@@ -3,8 +3,8 @@
 
 
 {% block content %}
-  <div class="user_delete">
-    Уверены, что хотите удалить {{ object.name }}
+  <div class="category_update">
+    Уверены, что хотите изменить активность категории {{ object.name }}
     {% comment %} {% if user_to_delete.first_name %}
       ({{ user_to_delete.first_name|title }}</b>
       {% if user_to_delete.last_name %}
@@ -12,10 +12,10 @@
       {% endif %})
     {% endif %} {% endcomment %}
     ?
-    <form action="{% url 'admin_staff:category_delete' object.pk %}"
+    <form action="{% url 'admin_staff:category_able' object.pk %}"
           method="post">
       {% csrf_token %}
-      <input class="btn btn-danger" type="submit" value="удалить">
+      <input class="btn btn-danger" type="submit" value="Изменить">
     </form>
     <button class="btn btn-success">
       <a href="{% url 'admin_staff:categories' %}">
