--- a/adminapp/templates/adminapp/base.html
+++ b/adminapp/templates/adminapp/base.html
@@ -45,7 +45,9 @@
         </nav>
     </div>
     <!--Container Main start-->
-    <div class="height-100 bg-light">
+    <div class="
+    {% comment %} height-100  {% endcomment %}
+    bg-light">
         {% block content %}
         {% endblock %}
     </div>
