--- a/ordersapp/templates/ordersapp/order_detail.html
+++ b/ordersapp/templates/ordersapp/order_detail.html
@@ -6,11 +6,11 @@
    <div class="basket_list">
        {% for item in object.orderitems.select_related %}
            <div class="basket_record">
-               <img src="{{ item.product.image }}"
+               <img style= 'width: 30px; height: 30px' src="/media/{{ item.product.image }}"
                     alt="{{ item.product.short_desc }}">
-               <span class="category_name">
+               {% comment %} <span class="category_name">
                    {{ item.product.category.name }}
-               </span>
+               </span> {% endcomment %}
                <span class="product_name">{{ item.product.name }}</span>
                <span class="product_price">
                    {{ item.product.price }}&nbspруб
